--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       padding: 0;
       background: linear-gradient(to bottom right, #fcd34d, #f472b6, #60a5fa);
       color: #333;
+      scroll-behavior: smooth; /* Smooth scrolling */
     }
 
     .rainbow-stripe {
@@ -36,6 +37,10 @@
       margin-top: 5px;
     }
 
+    section {
+      min-height: 60vh; /* Ensures sections are tall enough */
+    }
+
     section.hero {
       text-align: center;
       padding: 50px 20px;
@@ -58,7 +63,7 @@
 
     .services {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
       gap: 20px;
       padding: 40px 20px;
     }
@@ -157,7 +162,4 @@
   <!-- rest of the original content continues unchanged -->
 </body>
 </html>
-
-
-
 
