--- a/index.html
+++ b/index.html
@@ -55,7 +55,38 @@
       font-size: 1.1rem;
       color: #555;
     }
+  .services {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 40px 20px;
+    text-align: center;
+  }
 
+  .service {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    border: 3px solid #1e293b;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+  }
+
+  .service:hover {
+    box-shadow: 0 0 20px rgba(96, 165, 250, 0.6);
+    transform: translateY(-5px);
+  }
+
+  .service h3 {
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+    color: #1e293b;
+  }
+
+  .service p {
+    font-size: 1rem;
+    color: #555;
+  }
     .upload-section, .payment-section, .testimonials, .faq, .translator-signup {
       padding: 30px 20px;
       text-align: center;
@@ -112,6 +143,21 @@
   <section class="hero">
     <h2>Translation & Transcription Services</h2>
     <p>Instant, Affordable, and Rooted in African Language Excellence</p>
+  </section>
+  <!-- Add this section after the "hero" section -->
+<section class="services">
+    <div class="service">
+      <h3>Document Translation</h3>
+      <p>Translate any document into or from African languages. R80–R200 per document.</p>
+    </div>
+    <div class="service">
+      <h3>Audio Transcription</h3>
+      <p>Upload your audio for AI-assisted transcription. R5–R10 per minute.</p>
+    </div>
+    <div class="service">
+      <h3>Certified Translation</h3>
+      <p>Get official certified translations through our freelance experts.</p>
+    </div>
   </section>
 
   <section class="upload-section">
